replace unsafe to MemorySegment