@@ -33,12 +33,12 @@ java {
 }
 
 tasks.withType<JavaCompile> {
-    sourceCompatibility = "1.8"
-    targetCompatibility = "1.8"
+    sourceCompatibility = "22"
+    targetCompatibility = "22"
     options.encoding = "UTF-8"
     options.compilerArgs = options.compilerArgs + "-Xlint:all"
+    options.compilerArgs = options.compilerArgs + "--add-opens=java.base/sun.security=ALL-UNNAMED"
 }
-
 tasks.withType<Test> {
     useJUnit()
     testLogging {
